[gd_scene load_steps=14 format=2]

[ext_resource path="res://Input.gd" type="Script" id=1]
[ext_resource path="res://CommandProcessor.gd" type="Script" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Caret.gd" type="Script" id=4]
[ext_resource path="res://Fonts/dos_font_20.tres" type="DynamicFont" id=5]
[ext_resource path="res://Shader/CRT.gdshader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 6 )
shader_param/scan_line_count = 220.0

[sub_resource type="NoiseTexture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 4.0
texture = SubResource( 7 )
expand = true

[node name="CommandProcessor" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Background" type="PanelContainer" parent="."]
anchor_left = 0.0898438
anchor_top = 0.0972222
anchor_right = 0.910156
anchor_bottom = 0.902778
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="Background"]
margin_right = 1050.0
margin_bottom = 580.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Rows" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1039.0
margin_bottom = 570.0
custom_constants/separation = 10

[node name="InfoArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_right = 1029.0
margin_bottom = 500.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="Background/MarginContainer/Rows/InfoArea"]
margin_right = 1029.0
margin_bottom = 500.0
scroll_horizontal_enabled = false

[node name="HistoryRows" type="VBoxContainer" parent="Background/MarginContainer/Rows/InfoArea/ScrollContainer"]
custom_constants/separation = 25

[node name="InputArea" type="PanelContainer" parent="Background/MarginContainer/Rows"]
margin_top = 510.0
margin_right = 1029.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 50 )
custom_styles/panel = SubResource( 3 )

[node name="Column" type="HBoxContainer" parent="Background/MarginContainer/Rows/InputArea"]
margin_right = 1029.0
margin_bottom = 50.0

[node name="Caret" type="Label" parent="Background/MarginContainer/Rows/InputArea/Column"]
margin_top = 15.0
margin_right = 44.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.0784314, 0.580392, 0.0784314, 1 )
custom_fonts/font = ExtResource( 5 )
text = " >>:"
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Background/MarginContainer/Rows/InputArea/Column/Caret"]

[node name="Timer" type="Timer" parent="Background/MarginContainer/Rows/InputArea/Column/Caret"]

[node name="Input" type="LineEdit" parent="Background/MarginContainer/Rows/InputArea/Column"]
margin_left = 48.0
margin_right = 1029.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.0784314, 0.580392, 0.0784314, 1 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
max_length = 50
context_menu_enabled = false
script = ExtResource( 1 )

[connection signal="timeout" from="Background/MarginContainer/Rows/InputArea/Column/Caret/Timer" to="Background/MarginContainer/Rows/InputArea/Column/Caret" method="_on_Timer_timeout"]
[connection signal="text_entered" from="Background/MarginContainer/Rows/InputArea/Column/Input" to="." method="_on_Input_text_entered"]
[connection signal="text_entered" from="Background/MarginContainer/Rows/InputArea/Column/Input" to="Background/MarginContainer/Rows/InputArea/Column/Input" method="_on_Input_text_entered"]
